--- a/ansible/inventory/host_vars/master1.sops.yaml
+++ b/ansible/inventory/host_vars/master1.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:CVupdAauAus=,iv:3lZYekvyq64dUZhmGSuAi/r4gWu+52HqbTteG5qu3io=,tag:RgekE7fPeBBKBEo0tR2J6g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:7EZfS1MfUjk=,iv:fNxQ5VKsydd57QSBgIYbhrR/c9itngVsKAbRZ6xsbs4=,tag:Hrs4YoTQhiTL5Hyuh1l33w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBbHBHekhiSkhLREtOMVNI
-            L0szM3JmVGNrZEtkbEx0SmplbVpYQ0JYcmxFClM2WTRFdmFMSEcrWHdDbFVraFBU
-            a000aFJlNndTRG4wTlN1NzRwT3NFV0EKLS0tIEdlYlEvbEs0S1BiN1YrZGZaT3lp
-            c2ZKekRlNzdoaTB5d245cnR5eG14QWMKgLtc+mMVp+gnkWMfBpnFfUHCfyy6fRty
-            q4fu6mjTrhW5A/VV9dDp2YW5IkMUPAOwZBwRxl08Idbu1wfntpV8eQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEL0ZDdFB3eGpFOW9OS2tE
+            K2FHUDZDbTZXTVJRdWY0L3hWMUZDelJoNlEwCmhKa3ljMGt0WEU1SHFrZm8xZUt5
+            d3N2d2FwcVQyMXB3TUF0amlGMkpVVFUKLS0tIFVjcU9XU1FkKzRlR1VOcWhlSmJa
+            NEQ1ZEFRYmZwK255c0dtdjYrL2VaWncKN8khoBYJGFJjKb2N5R3IDfujJSFS98JU
+            zsXnJvA21iw4H6xk27WfYnI1Q1RYlYw0sOZYTS3M0wHBYwbbq0vMjQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-08T23:49:21Z"
-    mac: ENC[AES256_GCM,data:Pl5MF4QdcrYG5mIy7zsjfy+4arYzhbKDuW3AUyoJy9dS/b9RPgvybV11OV5uREpM02zACltZ7TKGt5XGAgWbgO4APk+wNzj/dO1nnzu2dT+gYvQd79LbBokln69RoDXUTFRU+Ln714gLRoI2LHlxExS62e65ygfyfce3WrsdI1U=,iv:QMCFImLbkHg+7Ghfa1e7OeEEA9B4ta4EKI8d/iN9Ovc=,tag:58gWW6lF/esLAkGBvVE94w==,type:str]
+    lastmodified: "2023-10-09T00:41:08Z"
+    mac: ENC[AES256_GCM,data:ZlzyGAC8k+uki0FFKOFG+jW/AuGI7JYlHm0yZCUr/VKKdyUgge9wr32IvPIz6e2K1Mm6kCs1f11NU5XRM1mNXxyogRiVI2eNKdCbQ44yQNX+fE1y2sokBNhWgPSzZCWyy4Qwv3R0CwmVGYESnYKy/hVw5WnKw4PFrQLk431qkVc=,iv:8giOAMXZEkzWoUeR3yLrK6iwIMrkHLJXHofopHg8Tjo=,tag:Jgx21KiYN8wy3JKAGzhjwA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
