--- a/ansible/inventory/host_vars/master2.sops.yaml
+++ b/ansible/inventory/host_vars/master2.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:UWJltHnCFn8=,iv:FU8qi13hqUjpwV8IeFzsC8XprUa7KoQvqHIA8EtWt3s=,tag:kbMVLmr+Yb42v2ZRB0GJCA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:+9UpOZ7mRac=,iv:WGx2ztOXkftkzcmQ4oF+IzjBrPl5CgiFYWO5SIGS8I0=,tag:TUEBmyysTpVnVK3iypURlA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxM1RHeFA2WGRUellVYUtT
-            L1FXV2U2VnkySHZEZnR1Q0JDaFNOY3pEWmlFCi8xVHNFMmJIaGJLM0NCV1hGaE1X
-            TFh5NDNabjYrYUgyUDh6MFA5aTVWTjQKLS0tIGQ4bytmUUJVSEpDWGpsTWVJbHdx
-            R0tMUHBhanhHNXRpYW5jdzd2R212TGsKt/RuOBFzpxlDd62hPqE+eMX8tTRmgPrZ
-            sIby9Vv/nktgv0yrgcSEH16sQpDZCY+UA6PKyaIkzsLNsgGJW2Tkiw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByREtvNzlTaTcxaGl1SUdV
+            ZzBIZUs1cVlKMFQzNlVNMXpkdXRjRWtEclRvCkczZkhoVXUyWHk0OEhKRUVTWHk3
+            K290MUJxQmZhdW1mdnIyMldLN29xUHcKLS0tIG5qTGJ3VzZWVXgyUlgwaFdSdW11
+            eFBzZlp1WEcrNlZwWklxY004K3kvU1UKObs3S24CyhM9MCw2Tb33r1FqENnrvbmv
+            5Xk0r/AHYHbbUF6Lnr7ee/86JSPC3J9OQWFNAQnGqXz98kFT7kq+Wg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-08T23:49:21Z"
-    mac: ENC[AES256_GCM,data:zeq9Z5yVz3KWzlEhL6CgTWAj0/6cVmaF6BQeRPqYvhPWSXwPzlVah6VioawZghRG5dvHSlsR2aDQLYyOgbFPhJ4rmwDegB2GfsQFzZBa+EjqNsnTsS6xFn+9CF+xa8/I1nJSmrGmS44iyj5HeuadVLkN0kJeKAEuYtfFg8CqhKc=,iv:+/b7FwEYKlYg2yf4xoERwleMBY3zeys3PcR7e1jNXQk=,tag:zX+FKyv8Ak4/YZxGMWo5bg==,type:str]
+    lastmodified: "2023-10-09T00:41:08Z"
+    mac: ENC[AES256_GCM,data:Y1QDVFyzFUwObbJC8aiLLgAEtuTaXWy0bsHltU1gs1r58Wr1yJlUBKHhib6ugn68i85PSXwpGAGdJW6ir39++2umJGIztsj1r2tbwuFaZKoCC9Z1twZP/qUkzhfJGCnJ5IOXMUsZ7PnJ/psnb0rAS2q2AGf7sEe+efH8jBkcdDk=,iv:6BLUq1Za+vswKvoLMYBava5qxcvc3Wis1+erf8h1/MY=,tag:m7N1McM1QaU/BJEWU7oB2g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
