--- a/ansible/inventory/host_vars/master3.sops.yaml
+++ b/ansible/inventory/host_vars/master3.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:BvKZz+h/NeM=,iv:bSEQV6ASnBbxye7Uj4QlzCA36kVPIbd5aXL//dd5U0E=,tag:eqE0kiQa6Fa1a5nsYg6OOA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:toL/DnEaSgU=,iv:V0hpIpHfGahRYCsVyIDm05e8Yc908TTJ/ezR99keHho=,tag:AthXzz8qBz5q0CPl250U9w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxWWMzQjRKY2pwTGt3aWFk
-            OHp6djFIRlFnWEl6bWxyWXpnU0xPaDFnaHdnCk9qemdTbUF2VFA0YWdXbGpwWDV3
-            YWhzTWFLeU9leDNHT1Rtc0Y4VVROdk0KLS0tIHIxdW5HbXNsdjVLZnZ4ajdkL1p5
-            K1F6QmhxUTFnT1huZWhHV3I1Q3BFRHMK+nUwAR7lIP+Ou6QvufGD5QPfsEXR4/XF
-            LX/DqGC5r5l1JzOXHbbI6rzWNi2m9XWZ8ORo3ARXbKsGADisTu6jQQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByVVpReTVMUVZoa2YrK3Nl
+            cE1NVlRRYjdmZ0Z6YVNSb29iYVRxV0NQRUZFCng1dXdFaDBtSkhGRU84eS9WZk5i
+            VVZ2cWJTZ1FBRlMxNmVaMnA2dlhQRGcKLS0tIGg4dXNVS2tXQjR1dWltU3RlOC9o
+            VFphR2FPSW9UQjlibWxBbDdZcmpNK00KRtGEhvXSWc698B9Mg86ic8sRm+genGPQ
+            xuUl03FRVljWA7pZ5J0XX+htaD9BU3zSOfI5pGONVlFf87+1Kh6vCw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-08T23:49:22Z"
-    mac: ENC[AES256_GCM,data:kubPbMk/n+jRQfKedbcfxNL47VDRe+hkqRMGj3sfgMhdC1rRgOkHepL1qGElY5+UVupC8aL3Q6qZQsyjcbf1q+lQMr7lvYwwgoTrnu9hbXMcLFWVNengCEaMKrXMIeZ11UB+fxTG88efnqo4zC4YaUaxyJXmzXrh7qhxolxsEQY=,iv:lCGgPfmhWv/YcXW9P7VhGgL/2lHMQZacUufzGw9H0zg=,tag:O0BUgi35svwpSqgJbBOp+Q==,type:str]
+    lastmodified: "2023-10-09T00:41:09Z"
+    mac: ENC[AES256_GCM,data:I7hOiDWkwF++wSNI5uIJBY9FhmeG+mpxbN4dLTxMQeW79BhdJDc00dCAEOMTnkXOdKQ2i8ey7qgTw/gae5k04UQCHqQw2Ba59gOYq//NvJrIuwUoXNv8WQISt/ncon5QVRUEXGY7EjnEQKRDlR8YaPX+7W2ftotV8/f1Pvw8BYM=,iv:ba9B7hupFmk/ViTsw7Xr37AxUtUm/rVaNH9nat3zmM4=,tag:+gRUzE3GqqF7LXmVIpx0KQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
