--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:nx6GwTj3cvmr5EqxptjZy1knSbFErkjacZLOu1K4hG2Lu8K2JAHzu68buKyXakMg91ooFpiomi6hjZJy,iv:y4bSBlS9r/K/DOIYg1xbQv67I/+5P1Lp3ezeSL6Vjac=,tag:xnRmrR9okc0pZ3HKLny8MQ==,type:str]
-    username: ENC[AES256_GCM,data:h8kx6Jk=,iv:ItRTKO9+Xoz6MD0HJDaljL59K6n0HtE6HOMCh9K2cIA=,tag:fztqVqbOSJAuZr5iqK5uXw==,type:str]
+    password: ENC[AES256_GCM,data:Q3UxE6JhFbrUwUNEofdsxHG0g4mlz8LL2/+lzWhG3LFYDnjvcHs6NG9STYSHh/LEJKvV6/XpytyT2Jd/,iv:aiUAl9hNhEwbGIAslzKdghYAxJ6NYx7T0KM8CklxlZo=,tag:TdMcCLKU8PNjx+kaimoOXQ==,type:str]
+    username: ENC[AES256_GCM,data:vHsuaJE=,iv:T2KK2oSyBxK/mvvqhUOX713Ft+drcTfd7ZfBMJhfs/Q=,tag:pTyKC1uDvVcMq8kjidwZqw==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvZVgzeFVuYUdkQXQ0WWh2
-            YlRNUm1ySTh2RDhsdU9NbTZmNjdDQXhyWjM0CjdWQnRobTMwTVIwZkIxZEx0QnRo
-            cjhWK1ptZlZPMGZHQUswam53aUdkamsKLS0tIHU3L0R2KzFQVys1SkR4aE5lVEhw
-            Nngyb2VhTzNmUEpUS2tDbnVmME5zcTgKwATMlWIsaG4y7RcZsoh0UCMhCTrnuUOL
-            4Ez/vS2oG433jWbutE6+15jps5DKlzVexPXtWuVhks/4JbkhVYVcgQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlUzNOZVNQZlVTcGxUK2Rq
+            OThnVTFHTFJVZWRBRFBETDVacURiZk9nNXlBCnU1a2M2ZkIvTTh1SmZnZ2JwVTlM
+            MnRtandUMkdTUlg3cUxxWE9scG9JQlUKLS0tIE01clFLTXVLVk54V3VLNzZaeU9H
+            dzE5R1FlbTI5M3k1eWNoVVhtcWhCTGMKlWdRenNoGi9LUdY5Wdz+vKMR6yUwrdvA
+            lXdvucNaOYZrOiBtV3Vcb7KyTixazrQ5SJzrdtrqHYesGsKwdGD4dw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-08T23:51:09Z"
-    mac: ENC[AES256_GCM,data:6HW6IL76y0eDioQhclY5TQZefizHxJghvNkiV6oSGw2HeYsr8k+cISnIgGtnDd3WuWu8bcSkDTu9mEl7svzOnzG1/jNNHpae8It6OffuhTW3TLwZvInCkRdWsJ6SnwNrBENf0mSgv+cqNH6A4XbcX+sALH1n3HtS7/uZhS7IQ5o=,iv:12kJhdQ9IBKaQLH1sUaV0T9U9H/+oKQVnnPABfsD6yo=,tag:FH+jiSn/nGZSp/MsVnyOVg==,type:str]
+    lastmodified: "2023-10-09T00:42:51Z"
+    mac: ENC[AES256_GCM,data:v5r2p+Usx4qZ/q8pTib9GOqueHzfGeg+wYLuoIykb2ub5vdKjZwTxgr524S6PYRXXYAtQHZKKq4ARCp+vg1uLWvn7Ur3VCDS628b16svvNL5UPZTKozRNgq16oHJZFAxgACqyPJokSCvivldhfF9TSRxl6hXVi3U7TS5FanrUUU=,iv:S4JSnPMwsMvyp90+4N+0Yrb2X6jAsvSJ9fE+ZCUCfgU=,tag:xeBCyaU3Bxla49a8LbzRJQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
