--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:UC/rhny/Sd/+EyAuX2IS4Q==,iv:HhErYDRq0XVUkqEF8vkLZfbWmwGyPSpnBxI0mUhGLIk=,tag:9PANAnTriLT0HVdgnQEmzg==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:uNp2QD63qdhjSR9XTHycGBfKM6idxycWMh4Xo2AMQs79G9BK,iv:bisOQIGI5XQ9hqu00N/R/5OejljWhg0hGxVHdD23lk4=,tag:m5auEZbiRO8dzi2ErjTpYQ==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:tsysobrXDO63/EE=,iv:1oMHjBGy010zGGatd6cC/78zFUCRq7dKxgVuWGVjzGo=,tag:HNcIAUlNs17nbbCXsdwiVQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:V4GqU1LvLQt6YdziTBSvaA==,iv:uZINAQwBISxfIBNgbW/t2Roq9dKe2SvPGmb0Qml0lqA=,tag:f0DuGYtri63vR/UtwjWlhQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:qM4E/x0IcheoProt8iNJ6ZdXDrzShUGi/XyzC021nQZWUg5M,iv:q3ckZ4LL+UQcx4jtG0cWJCnqRvjTRK5McVSNYi0qhm8=,tag:MMmNwkR1LYhdo89EBmAAGA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:edeJ7NFFvZ336dI=,iv:O5mj4fejTIbhMds64ZHdfWJmcRLW9SSqmMi4B88el7E=,tag:DypDTEUOrE7EC/w67OgiZg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxSzhBaUpPREo4N3k1ZFV3
-            N1Z5QWdwOGRrNkNrVG15SVY5QzQ2WjVla0hzCkI2YXhHdG1Da1JCdFBCdmRxNzY5
-            S05jODdidVdaVXlHd3cxUnNrM3hFWDQKLS0tIG5qZHUvNnp1MzZXbXRveFVwdVlE
-            eTh0Ni9IYmwyNHozSmhYc3hNcTJaZGsKLeHkn3QZ7AGbZTIgB0RPoIHWz2C8ctER
-            3k0OHXGh1g2+qX0xpEcconZunY5ZLZk4HrYV3vAwqQ7a6D6jhgsY4Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwb1BEL0JwYXZtZHp3Y2Qr
+            QkduQ2h3UmNoRklOQXI2QkhvRklsem4rTWpBClZxVEJjeThiMm1WQm12Mm56WTNW
+            bnFrSzY4THRyNEswSjAvYTQ4cy84VWcKLS0tIGptTlhJQzVKc2FzY2VWdWdDMWcx
+            WVB3dWt6Z2J0K0FZcHJMUmFzQnBjblEKqO+KmU12ROg9klqlYKcM3V6TrYMX3ysD
+            u7fJiyb9ruR35Fem3/vjPf/WU30nq7ZEs2G/veFoe3EyZyXr52YrGw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-08T23:50:47Z"
-    mac: ENC[AES256_GCM,data:0pInKylL07mWpwk7a6YRq90bkwGiLj3JZTRKLKLg6G2ur1MUXO1TD2MSZ3+j6SdgUh2jFcsb/0i243Vw/dB92etbwl5Ml++DcbYS90DYld8JQTbplWcxQfQp03mV/z8erZuYxP8nAI13TTA0EaTYAMP1YDZFJnANZjP90ZBSxz0=,iv:Sve8U4YgEOTtRxEHg6oYKqNwoGsJs2PrKX6hy+UVS24=,tag:XtNLPgbh8iHdhRdbzhA0Sg==,type:str]
+    lastmodified: "2023-10-09T00:42:31Z"
+    mac: ENC[AES256_GCM,data:xCDyWeu2AJuT9iwNIRFs2+szQUq097BtULF7DZZLY9ekYsMwzifOfLdO6hSECKBoR3KwTiRGRunhz9qxDZE7wzv5WhNOcka4uYuSVdiyrn+uq3Yi6ha8VlFSdWjvuus+X0J4Mydu54SZ4/OH9fd7pUSR619rdZsirEZqBSt46Ek=,iv:3mS/5O2oU2MCcCI7r0Ws8RntPzyGxoBnPs7sQw9mAfk=,tag:LzsZ16kZZ3uHpL7BqBHMrA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
