--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: grafana-admin-secret
     namespace: monitoring
 stringData:
-    admin-password: ENC[AES256_GCM,data:keK/ylpaPhM=,iv:exvCv7F27bpmAwptpSnXGZuRPk6I2d1wBPUvCRcU9q0=,tag:PNURvNFZipw6LDaqo8tGjA==,type:str]
-    admin-user: ENC[AES256_GCM,data:iQQFCsg=,iv:gXqev86tppH9P0ANYMIYeuwVROrWnOsEMDPNXew0FgQ=,tag:JwFK7u+dFyMeFFfl6MKuqg==,type:str]
+    admin-password: ENC[AES256_GCM,data:OH0DFZB+2j0=,iv:fNMpfdJj3LT3Sm0ZXMTQQD7KLqHjeaa53OPKB76plho=,tag:vIpApcvIB2PaUS3mN0NV/w==,type:str]
+    admin-user: ENC[AES256_GCM,data:a487q38=,iv:l9Gwo8U1wMC3pFwEgg4N+c998Lyrsciq5/O1Z5H5kd8=,tag:nhFpzH8P+HOf6PtVAOqqqw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjWng3NTI5NFBrbStoSTJJ
-            NnVEcUNyQndnQ0o5RTEwRVFHQ2ZvYjBvd1JRCktEZ2ZNRzVvcWdUdldranpHRmty
-            T0NPUC9QNXFQNzlzdHNpYXBPK2cySDAKLS0tIDFBaEpSblFsTHAxWXRJRkFuMGVL
-            VFlKemsvNVgxZklUUHMyR2s4Wk13WXcK5yAgPSpHmykzq6KNnJscW2GePpeToBfv
-            pd01FMilGpQdOzPoJzXsrz3yGKEYgD3iJFTJbOsGCrNcQAO+mXRnFA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYajZUdHdsWngzSW9uT2Uy
+            S0NmOXFBNlMvMXJpMzgrYmxXNXVOSzZRYlJBCnF1OEtJRnprMUNDNGdLL2MwUmFK
+            VjBRQ2h6RTJxVGc4YnRwaXhMZDlUb0kKLS0tIGdydE9UczRXSGs1ZTNWVFZJWGVa
+            SXQ3aHdOa2xzRmdjNTVkOWZaanpHV2cK5Zh/sgNTAGfU81wTFExaTJ8E8wdyizGs
+            WIDGOcC+kkniAynEdVAVwvKPvVHvH+rK6cvb6xPCypzq19DJlvQo6A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-08T23:50:54Z"
-    mac: ENC[AES256_GCM,data:P2zlncSaYxU6RH1hJXj+SEpiipbEEvkEiEBDhGVOYXfmOrq02WUzv3R+NQDPnN4NxHBQ6vPp1uSBZ1Jm9Jjqs2Yw9Sr5+pZ68sboMYiEWAsC0M1RoCRjybiAS1yYe5PT7Hybz37oRE9vDOKcI6j1nYrAMREq8RMxNu74DUV2Osc=,iv:5VqCz80jLK63nyLTa2xwXIDV/tKHPhJHKZe5pT9rxUk=,tag:nPpWJBtSmgkT+eXJ3Cq+Ig==,type:str]
+    lastmodified: "2023-10-09T00:42:37Z"
+    mac: ENC[AES256_GCM,data:/cDfAl5z7GbWD7VLUUxOMKXwoejAxOSefpvy8zPaMidKTKL+DoQ/fzse5UzD7kPrXDl2dIC5AClcWl7u2hIjkgGwFhBGjb8v3XvPUem51uvkmfI316QyAZbtdrrpVdqc8OVIqMb2VZOMyMrLKdo1WwxOG3R6OdxvlRrmq/3pvVc=,iv:DPSPZOSV3cvsbcC0NwCZ9ZizxT1S5mNDN3bM3xFfdq4=,tag:lJqhaYY97MyEMZvEaQdzEQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
