--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:GUB/shOltVpcovui,iv:YXFDXwTwr4RcPBRLUkicEbn/pCvo6949jFspRZvxnMU=,tag:zObg/EnqkpfgyinaflZZmA==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:1FseR7RWHql87eoS,iv:SJOIB0pM48Hic+I2Vn+GcC5zXewqhB76FRJ8eT0lGiQ=,tag:y1iig9d9MkPZQbGKnzKQAA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWc2JKYWRzTkR6ZU53S0t6
-            N1V3Z1habEVCd0hpNkNQdDg4eWdMZVFwcUIwCml4MXpGcGJnZ2VyL21kc0FNTTU2
-            OXFFV2QrT2pZOFFzeko0TTljZWhzYUEKLS0tIFF1R3lLM1JORzdDWmVNTDRsclBD
-            Q1NQNnRIRy9WcVJCSVFmeDl3bUw1VUEK42gPjAbxQGpDsGetr8e28uru96p9EAxS
-            vfvkaoLgMF8A+j4FEQUAJnCQJrgy0FhYfPDwNtalwSbU5RqEEDypLA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmd3REVDBWL2dEU3NKcjdz
+            eFZFM2pTRWVtWnhrZzY0Wk04RHRscmVFdGlnCkdNeVJJMFI1Y25PTVkwZDE4c2Zv
+            UDlMc0F4cXRETnZOMGNDNjdRZmlFZjgKLS0tIHAydEZQYy9wb2Q3Z2EvdXg5UDR3
+            aHR1S0FDWXNQaElBcThjUERXcWJGMnMKy68z/7pSGzGTXBzQ66ojq2Ec6aymL7uo
+            sd2DsoJgOI/3ZDZc4+BDWdsO640xJiGiYnO1EDy1DV31PKgq/BA01g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-08T23:50:47Z"
-    mac: ENC[AES256_GCM,data:VfRdAeWytenGzoi8xpntJ8HHFsMzZsf57ePdXXdC9nwyEjaS4L1TvLWkO6zmMfDXnm1aNdTD2Dy+H+Qn4ivewX5uLxk3C3SRdVUDuIGJ/kdBb5Ajw0dpV8uCp+edFcEGTUDEu8EVSFp84egmys1qvzKAwVtDuBuGhIHur7+SmTs=,iv:kfTdiTGUpIVkqC8PbkngRgf8laJX3iB2CiA6Cu+GKFM=,tag:/p3I7rrXnMoosr9YiqXjpg==,type:str]
+    lastmodified: "2023-10-09T00:42:31Z"
+    mac: ENC[AES256_GCM,data:j5h5cKA0se1Z4Xqk+CnZDR5uxTgaE0dXsAWFkSwQlzJrp250QwkYAph2zl+bBAyvdyhteInmH7J9s/wmxyGzCTgU14wc6tosS3hNkFkArUMtsky9h7xPppArd/dJ4OHUiQ2LxopW0yEvnualqwPzFD5iBMOXKMb+yoBbkRpfSJM=,iv:OtNrCfBMXnPg55wAFDPAIANRULF3Wxr1vjIyjy04ee8=,tag:XZzoVNVd45CqJ2pTGqqMGA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
