--- a/ansible/inventory/host_vars/master1.sops.yaml
+++ b/ansible/inventory/host_vars/master1.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:7EZfS1MfUjk=,iv:fNxQ5VKsydd57QSBgIYbhrR/c9itngVsKAbRZ6xsbs4=,tag:Hrs4YoTQhiTL5Hyuh1l33w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:e9ptsIJTRyA=,iv:ZAF5XCqkHG7cCxcjgy23fUAZt6v7YCHZwdjehaJuw6E=,tag:wCxGudcCDQasAaUPku4eog==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEL0ZDdFB3eGpFOW9OS2tE
-            K2FHUDZDbTZXTVJRdWY0L3hWMUZDelJoNlEwCmhKa3ljMGt0WEU1SHFrZm8xZUt5
-            d3N2d2FwcVQyMXB3TUF0amlGMkpVVFUKLS0tIFVjcU9XU1FkKzRlR1VOcWhlSmJa
-            NEQ1ZEFRYmZwK255c0dtdjYrL2VaWncKN8khoBYJGFJjKb2N5R3IDfujJSFS98JU
-            zsXnJvA21iw4H6xk27WfYnI1Q1RYlYw0sOZYTS3M0wHBYwbbq0vMjQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoaUxZcjV0V1Z6dWV1SVI3
+            bTQvOUU5U1VMQ2c2MGpsWTdJKzJ0TmJZQjA4CnN0cExweHYwZ1Q0Zi9pTkZ4eTk3
+            Zmg2WVRCZGVKc04rSkNGWjc5N1lUbHMKLS0tICt6VTVMNzY4RDVrMDhsdThZLy8w
+            RmFwTFAxSTloT3VXWGZzT0J3aUlFWG8KzSIZn9E2+WgfvoDNqKCGUei8HU635K+w
+            Bkm296ZD56h3txtXKcw7dBnvFJ9h1SBvSZq7vxpp1YszW5Jbhbz05g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T00:41:08Z"
-    mac: ENC[AES256_GCM,data:ZlzyGAC8k+uki0FFKOFG+jW/AuGI7JYlHm0yZCUr/VKKdyUgge9wr32IvPIz6e2K1Mm6kCs1f11NU5XRM1mNXxyogRiVI2eNKdCbQ44yQNX+fE1y2sokBNhWgPSzZCWyy4Qwv3R0CwmVGYESnYKy/hVw5WnKw4PFrQLk431qkVc=,iv:8giOAMXZEkzWoUeR3yLrK6iwIMrkHLJXHofopHg8Tjo=,tag:Jgx21KiYN8wy3JKAGzhjwA==,type:str]
+    lastmodified: "2023-10-09T01:05:14Z"
+    mac: ENC[AES256_GCM,data:ch05bsWekOnoxS1XTk4ZsWHoqKifDp5ctT+zHwCrNde0s7LAup9qfZ8Riv58jUIlMHtGSqBV1E/v4yO6JSSUSkSOmdDL/FUmGjdZHwnaqV699ZXWyc6Lgd8vyphqFfwKmPH0zbAm3J+XcrQxci86ZVBVv5tjEU7C8/MIPup4gZ8=,iv:AjKXpKAnx2sZAwxESD445hmmrtnGkTed3p3gOvzvENQ=,tag:s+B3o9Uupi5ZAecZiXaolw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
