--- a/ansible/inventory/host_vars/master2.sops.yaml
+++ b/ansible/inventory/host_vars/master2.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:+9UpOZ7mRac=,iv:WGx2ztOXkftkzcmQ4oF+IzjBrPl5CgiFYWO5SIGS8I0=,tag:TUEBmyysTpVnVK3iypURlA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:CwkWrP5PIsA=,iv:i6qZwGHjjI+gvZyfdJl2Je22eKv4YTlB9sdec9/xrtY=,tag:11omuIqolLzuZhaY8sgMfg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByREtvNzlTaTcxaGl1SUdV
-            ZzBIZUs1cVlKMFQzNlVNMXpkdXRjRWtEclRvCkczZkhoVXUyWHk0OEhKRUVTWHk3
-            K290MUJxQmZhdW1mdnIyMldLN29xUHcKLS0tIG5qTGJ3VzZWVXgyUlgwaFdSdW11
-            eFBzZlp1WEcrNlZwWklxY004K3kvU1UKObs3S24CyhM9MCw2Tb33r1FqENnrvbmv
-            5Xk0r/AHYHbbUF6Lnr7ee/86JSPC3J9OQWFNAQnGqXz98kFT7kq+Wg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPWmxTRHdsQS9vSzc3ZTlK
+            OUVVR0JwTkpMSUc3TUtIQ0hiQnhlNktkTlhvCkdoS3NRRmtKbHM2VlpxaVR0b2Rj
+            UnpzOVV6dEw0Tk13d0lsTkxhY2RPMHcKLS0tIHlhSjVqZXZzMEpiRXhKM0dMTUhR
+            WlhlTi9jU1pIMlYzMFNUMUxVSW1ZbFkKQ3FpkAWE+pd7iQyffJj/ttX1Mv2L9ZpV
+            ampBLFba9aNT8rLXT9zXahv1jAXo5E6EYw42SSKkZiqTjIdiu1TpOw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T00:41:08Z"
-    mac: ENC[AES256_GCM,data:Y1QDVFyzFUwObbJC8aiLLgAEtuTaXWy0bsHltU1gs1r58Wr1yJlUBKHhib6ugn68i85PSXwpGAGdJW6ir39++2umJGIztsj1r2tbwuFaZKoCC9Z1twZP/qUkzhfJGCnJ5IOXMUsZ7PnJ/psnb0rAS2q2AGf7sEe+efH8jBkcdDk=,iv:6BLUq1Za+vswKvoLMYBava5qxcvc3Wis1+erf8h1/MY=,tag:m7N1McM1QaU/BJEWU7oB2g==,type:str]
+    lastmodified: "2023-10-09T01:05:14Z"
+    mac: ENC[AES256_GCM,data:uepv9yvD7GWNG2SuKL1Vm67W+xhDSxn275MSOAYGOP50BFY0KVvMgo0JELcofSRX5Kc8MWNQDTdeinKSYQ1G0SLrNI/Ex/6nr61oeIQezEnJmsCFReFpC3HAalixVbi3YG5VYmErIxumLScHmA8GRdjOQ4OOHUkP4UZaS4ac20I=,iv:t0WkssmzZi7yOp9OyTo4JTZluVFkeqrW16Ij64l0gk4=,tag:Fi93i7l7pMHQFtiQmy0KdQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
