--- a/ansible/inventory/host_vars/master3.sops.yaml
+++ b/ansible/inventory/host_vars/master3.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:toL/DnEaSgU=,iv:V0hpIpHfGahRYCsVyIDm05e8Yc908TTJ/ezR99keHho=,tag:AthXzz8qBz5q0CPl250U9w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:EXrTL76jyjc=,iv:N2CjxNoqzLk26jUA3s378/gbBrVhqDCNUaDpgfKCykw=,tag:/i35tSlz/fpX/0ZeEXtDEg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByVVpReTVMUVZoa2YrK3Nl
-            cE1NVlRRYjdmZ0Z6YVNSb29iYVRxV0NQRUZFCng1dXdFaDBtSkhGRU84eS9WZk5i
-            VVZ2cWJTZ1FBRlMxNmVaMnA2dlhQRGcKLS0tIGg4dXNVS2tXQjR1dWltU3RlOC9o
-            VFphR2FPSW9UQjlibWxBbDdZcmpNK00KRtGEhvXSWc698B9Mg86ic8sRm+genGPQ
-            xuUl03FRVljWA7pZ5J0XX+htaD9BU3zSOfI5pGONVlFf87+1Kh6vCw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrZ2FVQ3p4dXRUcWFmMmpY
+            ZTVmYXo5eitodGZINFVKRXBrS0xnVzU2NlE4CmV3eW5Kcm1KVGFScVMwclJPZXlZ
+            T0FhZGVOTGx6WDVDcnA5NWsxSWMyUEEKLS0tIFA2SUJXc1p1MmJxRHZCQ1ZJbWZ2
+            OXpoUGYyelFCYmJtNzdSNXRZM0dFdGcKIB0Kis6eVgmn07LIPpb9q4lxnGNXq08o
+            wSzYB8PBylDTBajDrUs8zi//1DbAgyCyi15WDt9l7WMEdB7SjOrrtw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T00:41:09Z"
-    mac: ENC[AES256_GCM,data:I7hOiDWkwF++wSNI5uIJBY9FhmeG+mpxbN4dLTxMQeW79BhdJDc00dCAEOMTnkXOdKQ2i8ey7qgTw/gae5k04UQCHqQw2Ba59gOYq//NvJrIuwUoXNv8WQISt/ncon5QVRUEXGY7EjnEQKRDlR8YaPX+7W2ftotV8/f1Pvw8BYM=,iv:ba9B7hupFmk/ViTsw7Xr37AxUtUm/rVaNH9nat3zmM4=,tag:+gRUzE3GqqF7LXmVIpx0KQ==,type:str]
+    lastmodified: "2023-10-09T01:05:14Z"
+    mac: ENC[AES256_GCM,data:Yl+yZPApI5/lWt/d/AYzdEMLrraMJewTfgbhkGcUzPYHN9K7zbQGZPw4UrI8gwPxxlacvZNw8dG+YHSSqCtwOjAi+JHkPkdx0B+FyEqC/g8V5tvTkbyAo/A0GpG50mnYXf3VLZwxP6RJyPQAp+tNVCWAafx7fCuIsOlH6rWEyFg=,iv:8oNuO5ifdEHZ4Yp8NDhK6u6u4giUit3EneTFpuO7CYE=,tag:Q8Ll8IdKhfD4pePLfGbSTQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
