--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:Q3UxE6JhFbrUwUNEofdsxHG0g4mlz8LL2/+lzWhG3LFYDnjvcHs6NG9STYSHh/LEJKvV6/XpytyT2Jd/,iv:aiUAl9hNhEwbGIAslzKdghYAxJ6NYx7T0KM8CklxlZo=,tag:TdMcCLKU8PNjx+kaimoOXQ==,type:str]
-    username: ENC[AES256_GCM,data:vHsuaJE=,iv:T2KK2oSyBxK/mvvqhUOX713Ft+drcTfd7ZfBMJhfs/Q=,tag:pTyKC1uDvVcMq8kjidwZqw==,type:str]
+    password: ENC[AES256_GCM,data:Y52Ft7uZJ2Rp+zrni5c25wtniu2TvMuDbN6r6oCQJeaaPoR6DaQ5LoBrF+OIkSu7lbteeWVvEa9WHXUZ,iv:iVpup7BB6AKRlCKefABMELwxU2zqKWnCwc9hoYuyZGs=,tag:eNqEYGT/Xtbwle9CZB4TCQ==,type:str]
+    username: ENC[AES256_GCM,data:HLaTYaU=,iv:Y1gO0VWo0ceG8fOo8FULz3BtJdTy638KYHLcbY2X8tw=,tag:0W69Jq6eDqs9ySMsg9Y15Q==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlUzNOZVNQZlVTcGxUK2Rq
-            OThnVTFHTFJVZWRBRFBETDVacURiZk9nNXlBCnU1a2M2ZkIvTTh1SmZnZ2JwVTlM
-            MnRtandUMkdTUlg3cUxxWE9scG9JQlUKLS0tIE01clFLTXVLVk54V3VLNzZaeU9H
-            dzE5R1FlbTI5M3k1eWNoVVhtcWhCTGMKlWdRenNoGi9LUdY5Wdz+vKMR6yUwrdvA
-            lXdvucNaOYZrOiBtV3Vcb7KyTixazrQ5SJzrdtrqHYesGsKwdGD4dw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAybkZlbWhKUFBWMTlzR21y
+            a0xZSXJjRVlsSkIxdE8rcE1OUlB2eGdxVmxrCmx3Vk9RQ2NGc0JkaDVmaklZbE5S
+            WGg2K2tDWG9Qb09jbHROcGpYU2Y2aWsKLS0tIHdmU1lBaGE1dU52NmVlZ013NGdQ
+            b0N0TU5EeGhSaXoxZUhPdjR0WWhsTkUKPB2lBX7ZJ9FAvv1Xb6JSHHmvSzHY8Z6i
+            m4mCspxybwz9LHxspuWQgC/xkkNgNnD9A3M4zrBeV6UbdMTQoDKG0w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T00:42:51Z"
-    mac: ENC[AES256_GCM,data:v5r2p+Usx4qZ/q8pTib9GOqueHzfGeg+wYLuoIykb2ub5vdKjZwTxgr524S6PYRXXYAtQHZKKq4ARCp+vg1uLWvn7Ur3VCDS628b16svvNL5UPZTKozRNgq16oHJZFAxgACqyPJokSCvivldhfF9TSRxl6hXVi3U7TS5FanrUUU=,iv:S4JSnPMwsMvyp90+4N+0Yrb2X6jAsvSJ9fE+ZCUCfgU=,tag:xeBCyaU3Bxla49a8LbzRJQ==,type:str]
+    lastmodified: "2023-10-09T01:06:55Z"
+    mac: ENC[AES256_GCM,data:f8C2gQetjCuqrymgi1XMu2liGthZqMnMqQxtHtL+cqGWaQJCaqJNPtUNrJWXnWVFToi5fOCCJRkFNPVqxHyhs/RqKjO+vEScrvpeaUlDEE1lOXKl0j0/TxVtDNWQ3S14dqclcTSbJz8W5PEVvLT/pBwt4urgIQiEa5SyGFDCrJc=,iv:zfMz/YNVZ+ascdQU6WyZ+JP2jx4y4Hhv/lz57WdK8cw=,tag:DO1QS97SvBBZWQEX86K/Mg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
