--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: grafana-admin-secret
     namespace: monitoring
 stringData:
-    admin-password: ENC[AES256_GCM,data:OH0DFZB+2j0=,iv:fNMpfdJj3LT3Sm0ZXMTQQD7KLqHjeaa53OPKB76plho=,tag:vIpApcvIB2PaUS3mN0NV/w==,type:str]
-    admin-user: ENC[AES256_GCM,data:a487q38=,iv:l9Gwo8U1wMC3pFwEgg4N+c998Lyrsciq5/O1Z5H5kd8=,tag:nhFpzH8P+HOf6PtVAOqqqw==,type:str]
+    admin-password: ENC[AES256_GCM,data:8HOeEsohzgc=,iv:O2v69PR8Ak/5i3qfcgXlB0x1QC3RhN6kdVUBuj8yUqU=,tag:mApo7ShSpHHvDXRgNgvl3w==,type:str]
+    admin-user: ENC[AES256_GCM,data:NY9Waek=,iv:osmTE52bn37FasRmzQuL0BdpCe1y93HflVjOZ4PFNO4=,tag:eNmhZnXsFcIu1THmmOAcvQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYajZUdHdsWngzSW9uT2Uy
-            S0NmOXFBNlMvMXJpMzgrYmxXNXVOSzZRYlJBCnF1OEtJRnprMUNDNGdLL2MwUmFK
-            VjBRQ2h6RTJxVGc4YnRwaXhMZDlUb0kKLS0tIGdydE9UczRXSGs1ZTNWVFZJWGVa
-            SXQ3aHdOa2xzRmdjNTVkOWZaanpHV2cK5Zh/sgNTAGfU81wTFExaTJ8E8wdyizGs
-            WIDGOcC+kkniAynEdVAVwvKPvVHvH+rK6cvb6xPCypzq19DJlvQo6A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBISmViRVE3bHdUUTIwUE1v
+            YVpmaXYvQ3ZmRFFFbHl1aE9QWDEyZ0JZcUhRCmVhSUJnVGN2SUYvbDg0bEpyM0Fh
+            Y28wYWJ2a055enl0SjEvcTVpb253SGMKLS0tIDdWanB6UGtEeEw3VmZ5MXdLcEhG
+            Ulc2RzIvRDhNQnl6Mi9vSTIvU3lHU1kKc36I8VHxnfmqhVZ0oqZQEHewsHkqMDi5
+            VAekTWd0yi6smo4avcmkeSGjxuuh7GoqKR+tJuLXStxeOR9+/TDDtQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T00:42:37Z"
-    mac: ENC[AES256_GCM,data:/cDfAl5z7GbWD7VLUUxOMKXwoejAxOSefpvy8zPaMidKTKL+DoQ/fzse5UzD7kPrXDl2dIC5AClcWl7u2hIjkgGwFhBGjb8v3XvPUem51uvkmfI316QyAZbtdrrpVdqc8OVIqMb2VZOMyMrLKdo1WwxOG3R6OdxvlRrmq/3pvVc=,iv:DPSPZOSV3cvsbcC0NwCZ9ZizxT1S5mNDN3bM3xFfdq4=,tag:lJqhaYY97MyEMZvEaQdzEQ==,type:str]
+    lastmodified: "2023-10-09T01:06:40Z"
+    mac: ENC[AES256_GCM,data:iyRyDXcOFMuxCUixn8bpqBKIlgcrY6rJORLLRuC5y9q8ILeewqtNKnk8xdQH4FU1y2/vhpPs47NDXuUfATCSHWs/JAPOTyq9yboVUB/n2ncAk3djyFY5DZrB0MOd4dlD3pWUAAyoqkjvbJXNC3oOYlQqkZ9rYvzJ9PKFT/OzFBY=,iv:DqMKjLMeGdBHHsyvi7pKwmrfmOP/xLYNtCIcWrDhit8=,tag:I4YqMcCn6Xpll2d+ZPzxgw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
