--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:1FseR7RWHql87eoS,iv:SJOIB0pM48Hic+I2Vn+GcC5zXewqhB76FRJ8eT0lGiQ=,tag:y1iig9d9MkPZQbGKnzKQAA==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:dnntiZuZ0Kj1AAGI,iv:/OkUJ7tgqf02EF9FQ00ZhTqVF5ENNJ2uXqFHakAUnhI=,tag:srwSp0LXddYd+Xfkd6sRvw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmd3REVDBWL2dEU3NKcjdz
-            eFZFM2pTRWVtWnhrZzY0Wk04RHRscmVFdGlnCkdNeVJJMFI1Y25PTVkwZDE4c2Zv
-            UDlMc0F4cXRETnZOMGNDNjdRZmlFZjgKLS0tIHAydEZQYy9wb2Q3Z2EvdXg5UDR3
-            aHR1S0FDWXNQaElBcThjUERXcWJGMnMKy68z/7pSGzGTXBzQ66ojq2Ec6aymL7uo
-            sd2DsoJgOI/3ZDZc4+BDWdsO640xJiGiYnO1EDy1DV31PKgq/BA01g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwQmxDZmFuUS9NOXVrT1Zx
+            M084SkxJWjk2cGMrOC9makFuSjBUdVJ4WnpZCms2bGwxSjYvb1VoYjRKOFUycDJh
+            WE1kODlXTXR4bXFramkyTDd6ekpxNW8KLS0tIGtiOVcrdGRQZTd0dSswNnVaUkto
+            YWtrZ01aYWlZMW1pN2lKem5lZXk2dFkK95t0J/jfY4dMmoYVm9v4KBPB425UKBQN
+            adEHrTxf0ZW6mIzJRR7sY1sQgkn9EmAaAOUupteEzb3m2pH7zvzR2A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T00:42:31Z"
-    mac: ENC[AES256_GCM,data:j5h5cKA0se1Z4Xqk+CnZDR5uxTgaE0dXsAWFkSwQlzJrp250QwkYAph2zl+bBAyvdyhteInmH7J9s/wmxyGzCTgU14wc6tosS3hNkFkArUMtsky9h7xPppArd/dJ4OHUiQ2LxopW0yEvnualqwPzFD5iBMOXKMb+yoBbkRpfSJM=,iv:OtNrCfBMXnPg55wAFDPAIANRULF3Wxr1vjIyjy04ee8=,tag:XZzoVNVd45CqJ2pTGqqMGA==,type:str]
+    lastmodified: "2023-10-09T01:06:34Z"
+    mac: ENC[AES256_GCM,data:6ORr+5ZVmv9C6bH1z7uiJz9YAfHk9SU58Fs835E4izvpIprLQGOTJQssv6UNH3DXlebUq+JzIFql+dpaf4KZ8oqE+FTqGLyDU8jFUGGehS/AYqqRFf/EMVADaVNC7eKAm1gUKb54iARgPZePyXgetyiYmtaL46Gstwu1TQ1RyOE=,iv:+0wvoMdLycXSJL2InXVwOgh0iA9TRAON0GP+dISEKto=,tag:8hywuhLsfKF0Q13laTaaYw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
