--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:V4GqU1LvLQt6YdziTBSvaA==,iv:uZINAQwBISxfIBNgbW/t2Roq9dKe2SvPGmb0Qml0lqA=,tag:f0DuGYtri63vR/UtwjWlhQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:qM4E/x0IcheoProt8iNJ6ZdXDrzShUGi/XyzC021nQZWUg5M,iv:q3ckZ4LL+UQcx4jtG0cWJCnqRvjTRK5McVSNYi0qhm8=,tag:MMmNwkR1LYhdo89EBmAAGA==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:edeJ7NFFvZ336dI=,iv:O5mj4fejTIbhMds64ZHdfWJmcRLW9SSqmMi4B88el7E=,tag:DypDTEUOrE7EC/w67OgiZg==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:ruMCdNPC5/n6xkTSQZip3A==,iv:7NC3AzjDwoRDvmcSk8Re4L/Y5BuKZgG9uUlNvbPgM/U=,tag:mBeDgTO/m0xtFkt7tA48pA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:T3MXmT95RxUzAvjm/du3fZ2r6rvoWI2wTb/aT0L5YrDMq0oC,iv:SyEskupq2Q8UJer6Al5MPS9h5oo3cQCqN8e3+LLjMy4=,tag:ALrzJsLhyF7DGQxeq04c7Q==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:M+oO1WOx1kA7No4=,iv:z3BCHjow5TRKMYSEOFV57w8wALqODDgtnzpH36lfLKc=,tag:lAwtcTnh6AFu2e3LcBrzRQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwb1BEL0JwYXZtZHp3Y2Qr
-            QkduQ2h3UmNoRklOQXI2QkhvRklsem4rTWpBClZxVEJjeThiMm1WQm12Mm56WTNW
-            bnFrSzY4THRyNEswSjAvYTQ4cy84VWcKLS0tIGptTlhJQzVKc2FzY2VWdWdDMWcx
-            WVB3dWt6Z2J0K0FZcHJMUmFzQnBjblEKqO+KmU12ROg9klqlYKcM3V6TrYMX3ysD
-            u7fJiyb9ruR35Fem3/vjPf/WU30nq7ZEs2G/veFoe3EyZyXr52YrGw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqZ2IxcWFFUnJtUGwyMUNY
+            TWc2VUZZcUNYVXEvMTM5SEI3L24vQUcvQ2lvCjhUVlAwM2JPVndCNFRnamVaekUr
+            TWdRM3ZydzNHY3l2bnlKT1hxcFVvUUkKLS0tIDZDNmI1MVBTelRmazZubzNWSllr
+            eDZ0ZElkQWo0VlRmRWJCWlFWRGZ0dVEK6wPn1p+dFCapqdI3w1iFGsbNr8jbu5Wj
+            dyOzh7I+qiR6hzUBgc1QzCbYgb7bYnzUVBWqhrJCpnrwxuda5qunlg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T00:42:31Z"
-    mac: ENC[AES256_GCM,data:xCDyWeu2AJuT9iwNIRFs2+szQUq097BtULF7DZZLY9ekYsMwzifOfLdO6hSECKBoR3KwTiRGRunhz9qxDZE7wzv5WhNOcka4uYuSVdiyrn+uq3Yi6ha8VlFSdWjvuus+X0J4Mydu54SZ4/OH9fd7pUSR619rdZsirEZqBSt46Ek=,iv:3mS/5O2oU2MCcCI7r0Ws8RntPzyGxoBnPs7sQw9mAfk=,tag:LzsZ16kZZ3uHpL7BqBHMrA==,type:str]
+    lastmodified: "2023-10-09T01:06:34Z"
+    mac: ENC[AES256_GCM,data:+g93a56zdnzWM5prjOyy8r8/EQgS6oBz3btHjXacpvhyTtch6rsOF54Lr4FFDuXXb0fy/KLd/4s4cxiGk8uRKfPi+ektPB0ShXejOHb+3WA2yINwmTMty1rV1i7PXbYpfoKF9HjX+EG6cxunysk766cyVDxFJU8AjPpqN/z1AMA=,iv:K2Dp7IYBbDMBGHGIHEs+0c4shmkQPd81hJ+0YcdUEmA=,tag:ENNf1mzdiVRcAeHqx90N5A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
